SERVER-12876: fix durability check for if we need to commit fixing compact